Phase 1+2: workspace files and openclaw.json

--- a/render.yaml
+++ b/render.yaml
@@ -12,6 +12,8 @@ services:
         sync: false
       - key: GOG_ACCOUNT
         sync: false
+      - key: TELEGRAM_BOT_TOKEN
+        sync: false
       - key: NODE_ENV
         value: production
     disk:
