--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "node": ">=22"
   },
   "dependencies": {
-    "openclaw": "latest"
+    "openclaw": "latest",
+    "tsdav": "^2.1.8"
   },
   "scripts": {
     "start": "bash scripts/start.sh"
