--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,10 @@ services:
         sync: false
       - key: TELEGRAM_BOT_TOKEN
         sync: false
+      - key: ICLOUD_EMAIL
+        sync: false
+      - key: ICLOUD_APP_PASSWORD
+        sync: false
       - key: NODE_ENV
         value: production
     disk:
