Fix render plan: starter -> standard

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: worker
     name: jarvis-gateway
     runtime: node
-    plan: starter
+    plan: standard
     buildCommand: npm install
     startCommand: npm start
     envVars:
