Add ASSISTANT_NAME=Jarvis to Render env

--- a/render.yaml
+++ b/render.yaml
@@ -14,3 +14,5 @@ services:
         value: production
       - key: PERSISTENT_DIR
         value: /var/data/jarvis
+      - key: ASSISTANT_NAME
+        value: Jarvis
